--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="unitask"
+        android:label="Unitask"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:label="@string/app_name"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
