--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/code/Unitask/linux"
+    "cmake.sourceDirectory": "D:/code/Unitask/linux",
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
